<resources>
    <string name="app_name">Определение склонности к профессии</string>
    <string name="test_name">Определение склонности к профессии</string>
    <string name="description">Личностный опросник, который предназначен для определение склонности к профессии на основе типа акцентуации</string>
    <string name="create_account"><u>Я хочу создать аккаунт</u></string>
    <string name="time_test">9 минут</string>
    <string name="vopros_kol">88 вопросов</string>
    <string name="quest">Хотите пройти тест?</string>
    <string name="personal">Профиль</string>
    <string name="test">Тест</string>
    <string name="email"> Email</string>
    <string name="password"> Пароль</string>
    <string name="autorization">Авторизация</string>
    <string name="login">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="noAccount">У меня нет аккаунта</string>
    <string name="reset_password">Я забыл пароль</string>
    <string name="gender_check">Пол</string>
    <string name="register">Создать аккаунт</string>
    <string name="infoAccount">Для чего нужен аккаунт?</string>
    <string name="my_personal">Мой профиль</string>
    <string name="edit_personal">Изменить профиль</string>
    <string name="result">Посмотреть статистику</string>
    <string name="logout">Выйти</string>
    <string name="yes"> Да </string>
    <string name="no">Нет</string>
    <string name="statistic">Статистика</string>
    <string name="test_desc_header">Описание теста</string>
    <string name="next">Дальше</string>
    <string name="diagram_result">Диаграмма результатов</string>
    <string name="go_test">Начать тест</string>
    <string name="delimiter">*****************************************</string>
    <string name="typesDescription">Описание психотипов</string>
    <string name="demonstrativeType">Демонстративный тип</string>
    <string name="stuckType">Застревающий тип</string>
    <string name="pedanticType">Педантичный тип</string>
    <string name="excitableType">Возбудимый тип</string>
    <string name="hyperthymicType">Гипертимический тип</string>
    <string name="disthymicType">Дистимический тип</string>
    <string name="anxiouslyFearFullType">Тревожный тип</string>
    <string name="emotionallyType">Экзальтированный тип</string>
    <string name="emotiveType">Эмотивный тип</string>
    <string name="cyclothymicType">Циклотимный тип</string>
    <string name="demonstrative">Характеризуется повышенной способностью к вытеснению, демонстративностью поведения, живостью, подвижностью,
        легкостью в установлении контактов. Склонен к фантазерству, лживости и притворству, направленным на приукрашивание своей персоны, авантюризму, артистизму, к
        позерству. Им движет стремление к лидерству, потребность в признании, жажда постоянного внимания к своей персоне, жажда власти, похвалы; перспектива быть
        незамеченным отягощает его. </string>
    <string name="stuck">Его характеризует умеренная общительность, занудливость, склонность к нравоучениям, неразговорчивость. Часто страдает от
        мнимой несправедливости по отношению к нему. В связи с этим проявляет настороженность и недоверчивость по отношению к людям, чувствителен к обидам и огорчениям,
        уязвим, подозрителен, отличается мстительностью, долго переживает происшедшее, не способен «легко отходить» от обид. </string>
    <string name="pedantic">Характеризуется ригидностью, инертностью психических процессов, тяжелостью на подъем, долгим переживанием травмирующих
        событий. В конфликты вступает редко, выступая скорее пассивной, чем активной стороной. В то же время очень сильно реагирует на любое проявление нарушения
        порядка. На службе ведет себя как бюрократ, предъявляя окружающим много формальных требований.</string>
    <string name="excitable">Недостаточная управляемость, ослабление контроля над влечениями и побуждениями сочетаются у людей такого типа с властью
        физиологических влечений. Ему характерна повышенная импульсивность, инстинктивность, грубость, занудство, угрюмость, гневливость, склонность к хамству и брани,
        к трениям и конфликтам, в которых сам и является активной, провоцирующей стороной.</string>
    <string name="hyperthymic">Людей этого типа отличает большая подвижность, общительность, болтливость, выраженность жестов, мимики, пантомимики,
        чрезмерная самостоятельность, склонность к озорству, недостаток чувства дистанции в отношениях с другими. Часто спонтанно отклоняются от первоначальной темы в
        разговоре. Везде вносят много шума, любят компании сверстников, стремятся ими командовать. Они почти всегда имеют очень хорошее настроение, хорошее самочувствие,
        высокий жизненный тонус, нередко цветущий вид, хороший аппетит, здоровый сон, склонность к чревоугодию и иным радостям жизни.</string>
    <string name="disthymic">Люди этого типа отличаются серьезностью, даже подавленностью настроения, медлительностью, слабостью волевых усилий.
        Для них характерны пессимистическое отношение к будущему, заниженная самооценка, а также низкая контактность, немногословность в беседе, даже молчаливость.</string>
    <string name="anxiouslyFearFull">Людям данного типа свойственны низкая контактность, минорное настроение, робость, пугливость, неуверенность в
        себе. Дети тревожного типа часто боятся темноты, животных, страшатся оставаться одни. Они сторонятся шумных и бойких сверстников, не любят чрезмерно шумных
        игр, испытывают чувство робости и застенчивости, тяжело переживают контрольные, экзамены, проверки. Часто стесняются отвечать перед классом. Охотно
        подчиняются опеке старших, нотации взрослых могут вызвать у них угрызения совести, чувство вины, слезы, отчаяние.</string>
    <string name="emotionally">Характеризуется сменой гипертимных и дистимных состояний. Им свойственны частые периодические смены настроения,
        а также зависимость от внешних событий. Радостные события вызывают у них картины гипертимии: жажда деятельности, повышенная говорливость, скачка идей;
        печальные – подавленность, замедленность реакций и мышления, так же часто меняется их манера общения с окружающими людьми. В подростковом возрасте
        можно обнаружить два варианта циклотимической акцентуации: типичные и лабильные циклоиды.</string>
    <string name="emotive">Яркая черта этого типа – способность восторгаться, восхищаться, а также – улыбчивость, ощущение счастья,
        радости, наслаждения. Эти чувства у них могут часто возникать по причине, которая у других не вызывает большого подъема, они легко приходят в восторг от
        радостных событий и в полное отчаяние – от печальных. Им свойственна высокая контактность, словоохотливость, влюбчивость.</string>
    <string name="cyclothymic">Этот тип родственен экзальтированному, но проявления его не столь бурны. Для них характерны эмоциональность,
        чувствительность, тревожность, болтливость, боязливость, глубокие реакции в области тонких чувств. Наиболее сильно выраженная черта – гуманность, сопереживание
        другим людям или животным, отзывчивость, мягкосердечность, сорадование чужим успехам. </string>
    <string name="demonstrativejob"><b>Демонстративный тип.</b> Демонстративные личности добиваются успеха в тех областях, где на первое место выступает проблема оперативной ориентировки в
        непредсказуемой ситуации, в творческих, коммуникативных профессиях. Стремление к неординарности, внешним эффектам в сочетании с решительностью, артистизмом,
        обаянием делает их незаменимыми сотрудниками в области ведения переговоров, например, для создания и поддержания имиджа компании. Их трудовая жизнь может быть
        связана с профессиями искусства не из-за того, что они очень талантливы, а из-за престижа и постоянной возможности быть на виду. Помимо удовлетворения
        тщеславия очень важны и высокие гонорары, которые расцениваются как признание исключительных заслуг и таланта. В современных условиях демонстративных личностей
        может привлекать, к примеру, торгово-посредническая деятельность. При этом ничего не надо самому создавать, только рекламировать товар, перепродавать.
        Этим обеспечивается быстрый темп деятельности, личность находится все время на виду, может получать немалые прибыли.
        Они прекрасно подходят для выполнения представительских функций, проведения презентаций и своеобразной рекламы действий и идей.</string>
    <string name="stuckjob"><b>Застенчиваший тип.</b> Достигает высоких результатов в выбранной сфере (производственной, творческой) деятельности. Обладает способностью эффективно работать в
        любых условиях. Отличается целеустремленностью, активностью, высоким стремлением к профессиональным достижениям и карьерному росту.
        Это неутомимые и целеустремленные труженики, обладающие чувством долга, принципиальные, требовательные к себе и другим, настойчивые и последовательные.</string>
    <string name="pedanticjob"><b>Педантичный тип.</b> В условиях профессиональной деятельности проявления педантичности необходимы, чрезвычайно ценны. Лица с развитой педантичностью
        добросовестны, аккуратны, подвергают тщательному и всестороннему анализу свою деятельность, достойны высокого доверия руководства, коллег. Не претендуют на
        лидерство, являются надежными партнерами в бизнесе. Такие люди хорошо осознают ответственность по отношению к делу, которое им поручено, к месту работы,
        которое предпочитают не менять в течение длительного времени или на протяжении всей трудовой жизни.
        Несмотря на перечисленные достоинства педантичных людей, крайние проявления данного типа могут создавать проблемы в работе. Так, стремление к совершенству в
        деталях там, где это не важно для дела, может приводить к конфликтам с коллегами. Кроме того, такая позиция приводит к постоянному внутреннему напряжению, не
        позволяет расслабиться и отключиться от рабочих проблем. Прежде чем сдать работу, педантические личности по 2–3 раза проверяют себя. Конец рабочего дня для них
        не означает конца работы. Ложась спать, они долго обдумывают, «как все сегодня получилось», а иногда, забегая вперед, начинают заранее переживать и завтрашний
        день.
        Невозможность все выполнить так, как требует их добросовестность, ограничивает возможности педантических личностей в карьерном росте. Они, как правило, не
        только не стремятся к повышению по службе, но даже отказываются в тех случаях, когда им предлагают более ответственную высокооплачиваемую должность. Для них
        более приемлемо вообще снять с себя ответственность за порученное дело, чем пытаться справиться с ним неполноценно.
        Из них получаются прекрасные бухгалтера, экономисты, финансисты. Они незаменимы в работе, для выполнения которой требуется большая точность и
        аккуратность.</string>
    <string name="instruction">
        Вам будут предложены утверждения, касающиеся вашего характера.
        Отвечайте, долго не  раздумывая, вы можете выбрать один их двух ответов: «да» или «нет», других вариантов ответов  нет.
        На свой ответ нужно нажать, после чего у Вас появится кнопка перехода на следующий вопрос
    </string>
    <string name="email_forgot_pass">Введите email и мы вышлем новый пароль на Вашу почту</string>
    <string name="send">Выслать новый пароль</string>
</resources>